--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -16,7 +16,7 @@ spec:
   spec:
       containers:
         - name: goapp
-          image: <ECR_REPO_URL>
+          image: 020549807535.dkr.ecr.us-east-1.amazonaws.com/devops
           ports:
             - containerPort: 8080
 
